--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -308,35 +308,124 @@ jobs:
           echo "===== VERIFICANDO RESULTADOS DO MERGE ====="
           cd querocasa/data/results
 
+          # Função melhorada para verificar arquivos JSON
           verify_json_file() {
             local file=$1
+            echo "Analisando $file..."
+            
+            # Verificar se o arquivo existe
             if [ ! -f "$file" ]; then
               echo "❌ Arquivo $file não encontrado após o merge!"
               return 1
             fi
             
-            if ! jq empty "$file" 2>/dev/null; then
-              echo "❌ Arquivo $file contém JSON inválido!"
-              return 1
+            # Verificar tamanho do arquivo
+            local file_size=$(stat -c %s "$file")
+            echo "📊 Tamanho do arquivo: $file_size bytes"
+            
+            if [ "$file_size" -lt 5 ]; then
+              echo "❌ Arquivo $file está vazio ou muito pequeno!"
+              echo "[]" > "$file"
+              echo "✅ Arquivo substituído por um array vazio válido"
+              return 0
             fi
             
-            local total=$(jq 'length' "$file")
-            echo "Total de propriedades em $file: $total"
+            # Verificar se é um JSON válido
+            local jq_result
+            jq_result=$(jq empty "$file" 2>&1)
+            if [ $? -ne 0 ]; then
+              echo "❌ Arquivo $file contém JSON inválido!"
+              echo "🔍 Erro detalhado: $jq_result"
+              
+              # Diagnóstico adicional para encontrar o problema
+              echo "🔎 Tentando localizar o problema..."
+              
+              # Verificar se o início e fim são válidos (deve começar com [ e terminar com ])
+              local first_char=$(head -c 1 "$file")
+              local last_char=$(tail -c 2 "$file" | head -c 1)
+              
+              if [ "$first_char" != "[" ]; then
+                echo "❌ O arquivo não começa com '['. Primeiro caractere: $first_char"
+              fi
+              
+              if [ "$last_char" != "]" ]; then
+                echo "❌ O arquivo não termina com ']'. Último caractere: $last_char"
+              fi
+              
+              # Verificar problemas comuns
+              grep -n ",]" "$file" | head -5 | while read line; do
+                echo "🔴 Vírgula antes do fechamento de array na linha: $line"
+              done
+              
+              grep -n ",}" "$file" | head -5 | while read line; do
+                echo "🔴 Vírgula antes do fechamento de objeto na linha: $line"
+              done
+              
+              # Tentar recuperar o arquivo com jq
+              echo "🔄 Tentativa de recuperação automática..."
+              if jq -e 'if type == "array" then . else [] end' "$file" > "${file}.fixed" 2>/dev/null; then
+                mv "${file}.fixed" "$file"
+                echo "✅ Arquivo recuperado com sucesso!"
+              else
+                echo "❌ Tentativa de recuperação falhou. Criando array vazio..."
+                echo "[]" > "$file"
+                echo "✅ Arquivo substituído por um array vazio válido"
+              fi
+              
+              return 0
+            fi
             
+            # Se chegou aqui, o JSON é válido
+            local total=$(jq 'length' "$file")
+            echo "✅ Arquivo $file é um JSON válido"
+            echo "📊 Total de propriedades em $file: $total"
+            
+            # Verificar número de itens com IDs
             if jq -e 'map(select(.id != null)) | length' "$file" > /dev/null; then
               local ids_count=$(jq 'map(select(.id != null)) | length' "$file")
-              echo "Número de itens com IDs: $ids_count"
-              jq -r 'map(select(.id != null)) | .[0:5] | .[].id' "$file" 2>/dev/null || echo "Nenhum ID encontrado"
+              echo "🏷️ Número de itens com IDs: $ids_count"
+              
+              if [ $ids_count -lt $total ]; then
+                echo "⚠️ Atenção: há $(($total - $ids_count)) itens sem ID!"
+              fi
+              
+              # Mostrar os primeiros IDs como amostra
+              echo "🔑 Amostra de IDs:"
+              jq -r 'map(select(.id != null)) | .[0:3] | .[].id' "$file" 2>/dev/null || echo "Nenhum ID encontrado"
+            else
+              echo "⚠️ Nenhum item com ID encontrado!"
+            fi
+            
+            # Verificar se há propriedades sem links
+            local no_link_count=$(jq 'map(select(.link == null)) | length' "$file")
+            if [ "$no_link_count" -gt 0 ]; then
+              echo "⚠️ Há $no_link_count itens sem link!"
             fi
             
             return 0
           }
 
-          echo "Analisando olxResults.json após o merge:"
+          # Validando os arquivos
+          echo "🔍 Analisando olxResults.json após o merge:"
           verify_json_file "olxResults.json"
 
-          echo "Analisando zapResults.json após o merge:"
+          echo "🔍 Analisando zapResults.json após o merge:"
           verify_json_file "zapResults.json"
+
+          # Verificação final para garantir que ambos os arquivos são válidos
+          echo "🧪 Verificação final dos arquivos processados:"
+          for file in olxResults.json zapResults.json; do
+            if ! jq empty "$file" 2>/dev/null; then
+              echo "❌ FALHA: $file ainda contém JSON inválido após tentativas de correção!"
+              echo "⚠️ Conteúdo de emergência sendo aplicado..."
+              echo "[]" > "$file"
+              echo "✅ Arquivo $file definido como array vazio"
+              export $(echo "${file%%Results.json}_VALID=false" | tr '[:lower:]' '[:upper:]')
+            else
+              echo "✅ Arquivo $file validado com sucesso"
+              export $(echo "${file%%Results.json}_VALID=true" | tr '[:lower:]' '[:upper:]')
+            fi
+          done
 
       - name: Update coordinates
         run: |
