--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "puppeteer": "^23.3.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@playwright/test": "^1.52.0",
+    "@types/node": "^22.15.18",
+    "install": "^0.13.0",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+    
   }
 }
