--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alasql": "^4.6.6",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "puppeteer": "^23.3.0"
