--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -279,21 +279,22 @@ jobs:
 
           async function runMerge() {
             try {
-              console.log('Configurando caminhos específicos para o CI...');
+              console.log('🔄 Configurando caminhos específicos para o CI...');
               console.log(`OLD_PATH: ${OLD_PATH}`);
               console.log(`NEW_PATH: ${NEW_PATH}`);
               
               configurePaths(OLD_PATH, NEW_PATH);
               
-              console.log('Iniciando processamento de OLX...');
+              console.log('🔄 Iniciando processamento de OLX...');
               await processPlatformResults('olx');
               
-              console.log('Iniciando processamento de ZAP...');
+              console.log('🔄 Iniciando processamento de ZAP...');
               await processPlatformResults('zap');
               
-              console.log('Merge completo!');
+              console.log('✅ Merge completo!');
             } catch (error) {
-              console.error('Erro durante o merge:', error);
+              console.error('❌ Erro durante o merge:', error);
+              console.error('Stack trace:', error.stack);
               process.exit(1);
             }
           }
@@ -301,8 +302,9 @@ jobs:
           runMerge();
           EOF
 
+          echo "📝 Executando merge com AlaSQL..."
           node run-merge.js
-          echo "Resultados mesclados com sucesso!"
+          echo "✅ Resultados mesclados com sucesso!"
 
       - name: Verify merge results
         run: |
